add to chap4 sections about sc_set, sc_tup, sc_rel, sc_list

--- a/chap4.tex
+++ b/chap4.tex
@@ -1445,7 +1445,8 @@ sc-конструкций. Ограничения \verb|CONSTR_5_*_*_*_*_*| бы
 \begin{figure}
   \centering
   \includegraphics{images/4/search/CONSTR_3l2}
-  \caption{ Пример sc-конструкции для ограничения вида CONSTR_3l2_f_a_a_a_f}
+  \caption{ Пример sc-конструкции для ограничения вида
+    \lstinline|CONSTR_3l2_f_a_a_a_f|}
   \label{fig:CONSTR_3l2}
 \end{figure}
 
@@ -1459,7 +1460,8 @@ sc-конструкций. Ограничения \verb|CONSTR_5_*_*_*_*_*| бы
 \begin{figure}
   \centering
   \includegraphics{images/4/search/CONSTR_ORD_BIN_CONN1}
-  \caption{ Пример sc--конструкции для ограничения вида CONSTR_ORD_BIN_CONN1}
+  \caption{ Пример sc--конструкции для ограничения вида
+    \lstinline|CONSTR_ORD_BIN_CONN1|}
   \label{fig:CONSTR_ORD_BIN_CONN1}
 \end{figure}
 
@@ -1609,6 +1611,441 @@ if (search_5_f_cpa_a_cpa_f(
   \lstinline|CONSTR_3l2_f_a_a_a_f| (функция используется так же, как и
   все описанные выше oneshot-функции)
 \end{itemize}
+
+\subsection{Высокоуровневая работа с основными абстракциями в sc-памяти}
+
+В данном разделе будут рассмотрены функционал, который упрощает и
+делает более читабельными создание и обработку основных более
+высокоуровневых конструкций, который встречаются в sc-памяти.
+
+\subsubsection{Работа с sc-множествами}
+
+Под sc-множеством в этом разделе подразумевается sc-узел,
+т.е. sc-элемент, из которого могут выходить sc-дуги принадлежности
+(позитивные, негативные и константные sc-дуги). Если sc-элемент входит
+в sc-множество, значит от sc-множества к нему проведена позитивная
+sc-дуга.
+
+В заголовочном файле \verb|sc_set.h| объявлен класс
+\lstinline|sc_set|, который предоставляет статические методы обработки
+sc-множеств. Все статические методы собраны в класс
+\lstinline|sc_set|, а не объявлены как функции, потому что в языке С++
+класс предоставляет возможности пространства имен, когда не подходит
+использование явного введения пространства имен с использование
+объявления \lstinline|namespace|. Поэтому класс \lstinline|sc_set|
+является классом только с формальной точки зрения.
+
+В классе \lstinline|sc_set| собраны основные часто используемые операции по
+обработки sc-множеств и они все в качестве первого аргумента принимают
+sc-сессию, через которую будет осуществляться работа. Например, если
+вам надо проверить пусто ли sc-множество, то при помощи метода
+\lstinline|sc_set::is_empty| это можно сделать вот так:
+
+\begin{lstlisting}[texcl]
+#include <sc_set.h>
+
+if (sc_set::is_empty(session, set1)) {
+    // Множество пусто
+} else {
+    // Множество непусто
+}
+\end{lstlisting}
+
+Первым мы рассмотрим набор статических методов, которые занимаются
+проверкой вхождения sc-элемента в sc-множество. Таких методов
+существует три вида:
+\begin{lstlisting}[texcl]
+/// Если sc-элемент c sc-адресом @p el входит в
+/// sc-множество с sc-адресом @p set, то метод вернет
+/// sc-адрес позитивной sc-дуги, связывающей
+/// sc-множество с этим sc-элементом. В противном случае
+/// метод вернет 0.
+static sc_addr is_in(sc_session *s, sc_addr el, sc_addr set);
+
+/// Если sc-элемент c sc-адресом @p el входит в
+/// sc-множество с sc-адресом @p set1 или в sc-множество с sc-адресом
+/// @p set2, то метод вернет sc-адрес позитивной sc-дуги, связывающей
+/// sc-множество с этим sc-элементом, которое в списке аргументов стоит
+/// раньше. В противном случае метод вернет 0.
+static inline sc_addr is_in_any(sc_session *s, sc_addr el, sc_addr set1,
+    sc_addr set2);
+
+/// Если sc-элемент c sc-адресом @p el входит в
+/// sc-множество с sc-адресом @p set1 и в sc-множество с sc-адресом
+/// @p set2, то метод вернет true.
+/// В противном случае метод вернет false.
+static inline bool is_in_all(sc_session *s, sc_addr el, sc_addr set1,
+    sc_addr set2);
+\end{lstlisting}
+
+Существуют варианты методов \lstinline|sc_set::is_in_any| и
+\lstinline|sc_set::is_in_all|, которые перегружены для поддержки
+большего количества sc-множеств (до 9 включительно). Я думаю, что
+читателю должно быть понятно, как изменяется поведение методов при
+использовании более двух sc-множеств. Самым часто используемым
+является метод \lstinline|sc_set::is_in|.
+
+Следующий набор статических методов предназначен для включения
+sc-элемента в sc-множество:
+\begin{lstlisting}[texcl]
+/// Метод включает sc-элемент с sc-адресом @p el
+/// в sc-множество с sc-адресом @p set1. Позитивная sc-дуга создается
+/// в sc-сегменте @p seg. Признак константности этой sc-дуги
+/// определяется исходя из константности sc-множества.
+///
+/// Есть варианты этого метода, которые перегружены для работы с более
+/// чем одним sc-множеством (до 9 sc-множеств).
+static inline sc_addr include_in(sc_session *s, sc_segment *seg,
+    sc_addr el, sc_addr set1);
+
+/// Метод работает аналогично \verb|sc_set::include_in|, только
+/// позитивная sc-дуга создается в sc-сегменте включаемого sc-элемента.
+///
+/// Есть варианты этого метода, которые перегружены для работы с более
+/// чем одним sc-множеством (до 9 sc-множеств).
+static inline sc_addr include_in(sc_session *s, sc_addr el,
+    sc_addr set1);
+
+/// Метод включает в sc-множество с sc-адресом @p set1
+/// sc-элемент с sc-адресом @p el1. Позитивная sc-дуга создается
+/// в sc-сегменте @p seg. Признак константности этой sc-дуги
+/// определяется исходя из константности sc-множества.
+///
+/// Есть варианты этого метода, которые перегружены для работы с более
+/// чем одним включаемым sc-элементом (до 9 sc-множеств).
+static inline void include(sc_session *s, sc_segment *seg, sc_addr set,
+    sc_addr el1);
+
+/// Метод работает аналогично \verb|sc_set::include|, только
+/// позитивная sc-дуга создается в sc-сегменте sc-множества.
+///
+/// Есть варианты этого метода, которые перегружены для работы с более
+/// чем одним включаемым sc-элементом (до 9 sc-множеств).
+static inline void include(sc_session *s, sc_addr set, sc_addr el1);
+\end{lstlisting}
+
+И последний рассматриваемый набор статических методов предназначен для
+исключения sc-элемента из sc-множества:
+\begin{lstlisting}[texcl]
+/// Исключает sc-элемент с sc-адресом @p el из
+/// sc-множества с sc-адресом @p set1. Этот метод удаляет
+/// позитивную sc-дугу, связывающую sc-множество с его элементом.
+/// Если удаление sc-дуги произошло, то метод вернет true, иначе false.
+///
+/// Метод работает с sc-множествами без кратных вхождений элементов.
+///
+/// Есть варианты этого метода, которые перегружены для исключения
+/// с более чем из одного sc-множества (до 9 sc-множеств). В этом случае
+/// метод вернет true, если исключение произошло хотя бы из одного
+/// sc-множества.
+static inline bool exclude_from(sc_session *s, sc_addr el,
+    sc_addr set1);
+
+/// Этот метод почти аналогичен методу \verb|sc_set::exclude_from|, только
+/// он учитывает кратные вхождения элемента в sc-множество.
+static inline bool exclude_multi_from(sc_session *s, sc_addr el,
+    sc_addr set1);
+
+/// Удаляет элементы sc-множества с sc-адресом @p set.
+static void erase_from(sc_session *s, sc_addr set);
+\end{lstlisting}
+
+\subsubsection{Работа с sc-связками}
+
+Класс \lstinline|sc_tup| (объявлен в файле \verb|sc_tuple.h|)
+предоставляет статические методы для работы с sc-связками. Самой
+распространенной операцией над sc-связкой является получение компонент
+с указанным атрибутом. Для этого можно использовать oneshot-поиск,
+однако удобнее пользоваться статическим методом
+\lstinline|sc_tup::at|. Например, вот так:
+\begin{lstlisting}[texcl]
+#include <sc_tuple.h>
+
+// $\dots$
+
+sc_addr first_component = sc_tup::at(
+    session,
+    tuple,   // sc-адрес связки
+    N1_      // sc-адрес атрибута \verb|1_|
+);
+
+// \verb|first_component| будет равно 0, если
+// компонент с атрибутом \verb|1_| не был найден
+if (first_component) {
+    // Компонент найден
+} else {
+    // Компонент не найден
+}
+\end{lstlisting}
+
+Также распространенной операцией является добавление в sc-связку
+компонента с заданным атрибутом. Для этого можно использовать
+низкоуровневые методы типа \lstinline|sc_session::gen5_f_a_f_a_f|, но, на мой
+взгляд, гораздо удобнее использовать статический метод
+\lstinline|sc_tup::add|. Вот два способа добавить компонент component с атрибутом
+\idtf{1\_} в связку \lstinline|tuple|:
+\begin{lstlisting}[texcl]
+sc_tup::add(
+    session,
+    segment,  // все sc-дуги будут сгенерированы в этом sc-сегменте
+    tuple,    // sc-адрес связки
+    N1_,      // sc-адрес атрибута
+    component // sc-адрес добавляемого компонента
+);
+
+// Все sc-дуги будут сгенерированы в sc-сегменте,
+// в котором находится sc-элемент \verb|tuple|
+sc_tup::add(
+    session,
+    tuple,    // sc-адрес связки
+    N1_,      // sc-адрес атрибута
+    component // sc-адрес добавляемого компонента
+);
+\end{lstlisting}
+
+\subsubsection{Работа с sc-отношениями}
+
+Аналогично классам \lstinline|sc_set| и \lstinline|sc_tup| для работы
+с sc-отношениями есть класс \lstinline|sc_rel|, объявленный в файле
+\verb|sc_relation.h|. Часто используемыми операциями для работы с
+sc-отношениями являются добавление бинарной ориентированной связки в
+sc-отношение и поиск бинарной ориентированной связки с указанными
+компонентами.
+
+Для добавления бинарной ориентированной связки в sc-отношение
+используется статический метод \lstinline|sc_rel::add_ord_tuple|:
+\begin{lstlisting}[texcl]
+/// Метод создает бинарную ориентированную sc-связку, в которую
+/// включает под атрибутом \verb|1_| sc-элемент с sc-адресом @p v1, а
+/// под атрибутом \verb|2_| - sc-элемент с sc-адресом @p v2.
+/// Созданная sc-связка включается в sc-отношение @p rel.
+/// SC-адрес созданной sc-связки возвращается в качестве результата.
+///
+/// Признак константности sc-связки определяется по константности
+/// sc-отношения.
+///
+/// Если необходимы sc-дуги, связывающие sc-связку с ее компонентами,
+/// то можно передать в качестве аргументов @p av1 и @p av2 адреса
+/// переменных, в которые будут записаны sc-адреса соответствующих
+/// sc-дуг. По-умолчанию в качестве этих аргументов передается 0.
+static sc_addr add_ord_tuple(sc_session *s, sc_addr rel, sc_addr v1,
+    sc_addr v2, sc_addr *av1=0, sc_addr *av2=0);
+\end{lstlisting}
+
+Для поиск бинарных ориентированных sc-связок в sc-отношении могут быть
+использованы следующие статические методы класса \lstinline|sc_rel|:
+\begin{lstlisting}[texcl]
+/// В бинарном ориентированном sc-отношении с sc-адресом @p rel
+/// находит связку, в которой компонентом с атрибутом \verb|1_| является
+/// sc-элемент с sc-адресом @p val1.
+///
+/// Метод возвращает sc-адрес компонента с атрибтом \verb|2_| в данной связке.
+/// Если такой связки не найдено, то метод вернет 0.
+///
+/// Если необходимо получить sc-адрес найденной связки, то в качестве
+/// @p tuple можно передать адрес переменной, куда будет записан искомый
+/// sc-адрес.
+static inline sc_addr bin_ord_at_2(sc_session *s, sc_addr rel,
+    sc_addr val1, sc_addr *tuple=0);
+
+/// Этот метод аналогичен методу \verb|sc_rel::bin_ord_at_2|, только теперь
+/// мы ищем связку, зная sc-адрес компонента с атрибутом \verb|2_|, а
+/// возвращаем компонент с атрибутом \verb|1_|.
+static sc_addr bin_ord_at_1(sc_session *s, sc_addr rel, sc_addr val2,
+    sc_addr *tuple=0);
+\end{lstlisting}
+
+\subsubsection{Двусвязный список в sc-памяти}
+
+Библиотека libsc предоставляет функционал для представления в
+sc-памяти двусвязных списков. Для этого используются ключевые узлы
+\idtf{list\_next\_} и \idtf{list\_value\_}, которые находятся в
+sc-сегмент \verb|/proc/keynode|. На рис.~\ref{fig:Example_sc_list}
+показан пример кодирования списка из константных sc-узлов \idtf{X},
+\idtf{Y}, \idtf{Z}.
+
+\begin{figure}
+  \centering
+  \includegraphics{images/4/Example_sc_list}
+  \caption{Кодирование списка из элементов X, Y, Z}
+  \label{fig:Example_sc_list}
+\end{figure}
+
+
+Элементы \idtf{L1}, \idtf{L2}, \idtf{L3} называются элементами списка
+и имеют идентификаторы исключительно для наглядности
+объяснения. Элемент \idtf{L1} – это начальный элемент списка, а
+\idtf{L3} – конечный элемент списка. Каждый элемент списка является
+связкой из двух компонентов:
+\begin{itemize}
+\item под атрибутом \idtf{list\_value\_} в элемент списка входит его
+  значение. Например, на рис.~\ref{fig:Example_sc_list} значением
+  элемента списка \idtf{L1} является sc-узел \idtf{X};
+\item под атрибутом \idtf{list\_next\_} в элемент списка входит
+  следующий элемент списка. Этот компонент связки может
+  отсутствовать. Например, на рис.~\ref{fig:Example_sc_list} следующим
+  для элемента списка \idtf{L1} является элемент списка \idtf{L2}, а
+  для элемент списка \idtf{L3} нет следующего элемента, потому он
+  является концевым.
+\end{itemize}
+
+По способу кодирования список, представленный на
+рис.~\ref{fig:Example_sc_list}, является односвязным, но по интерфейсу
+работы с ним является двусвязным. В заголовочном файле
+\verb|sc_list.h| объявлен класс \lstinline|sc_list|, который
+предоставляет статические методы для работы со списками в sc-памяти и
+STL-совместимые однонаправленные итераторы для перебора их
+элементов. Все методы класса \lstinline|sc_list| в качестве своего
+первого аргумента принимают sc-сессию, через которую будет
+производиться работа с sc-памятью.
+
+Первым методом, который вы рассмотрим, будет
+\lstinline|sc_list::create|. Он объявлен как:
+\begin{lstlisting}[texcl]
+/// Создать элемент списка в sc-сегменте @p seg со значением @p val и
+/// установить его следующим для элемента @p prev
+static sc_addr create(sc_session *s, sc_segment *seg, sc_addr val,
+    sc_addr prev=0);
+\end{lstlisting}
+
+Метод \lstinline|sc_list::create| нужно использовать для создания
+первого элемента списка следующим образом:
+\begin{lstlisting}[texcl]
+// Создание головы списка.
+sc_addr list_head = sc_list::create(
+    session,
+    segment,
+    value    // sc-адрес значения головы списка
+);
+
+// Список состоит из одного элемента, поэтому
+// голова списка является и его концом.
+sc_addr list_tail = list_head;
+\end{lstlisting}
+
+Либо метод можно использовать для добавления элемента в список, если
+известен его конец:
+\begin{lstlisting}[texcl]
+// Создаем второй элемент списка.
+// Созданный элемент будет концевым в нашем списке.
+sc_addr list1 = sc_list::create(
+    session,
+    segment,
+    value1    // sc-адрес значения этого элемента списка
+
+    // sc-адрес элемента списка,
+    // для которого созданный элемент будет следующим
+    list_tail
+);
+
+// Запомним, что list1 - это конец списка.
+list_head = list1;
+\end{lstlisting}
+
+Для работы со списками существует набор статических get-методов,
+которые позволяют получить различные характеристики для элемента
+списка:
+\begin{lstlisting}[texcl]
+/// Возвращает sc-адрес следующего элемент списка
+/// для элемента списка @p list.
+/// Вернет 0, если элемент списка @p list является хвостовым.
+static sc_addr get_next(sc_session *s, sc_addr list);
+
+/// Возвращает sc-адрес предыдущего элемент списка
+/// для элемента списка @p list.
+/// Вернет 0, если элемент списка @p list является головным.
+static sc_addr get_prev(sc_session *s, sc_addr list);
+
+/// Возвращает sc-адрес значения элемента списка @p list.
+/// Вернет 0, если для элемента списка @p list значение не установлено.
+static sc_addr get_value(sc_session *s, sc_addr list);
+\end{lstlisting}
+
+Так же в классе \lstinline|sc_list| существует набор статических
+set-методов, которые позволяют установить различные характеристики для
+элемента списка:
+\begin{lstlisting}[texcl]
+/// Установить следующим элементом для элемента списка @p list1
+/// sc-элемент @p list2.
+/// Необходимые sc-элементы будут созданы в sc-сегменте @p seg.
+static sc_retval set_next(sc_session *s, sc_segment *seg, sc_addr list1,
+    sc_addr list2);
+
+/// Аналогично \verb|#sc_list::set_next|, только необходимые sc-элементы
+/// будут созданы в sc-сегменте, в котором находится sc-элемент c
+/// sc-адресом @p l1.
+static inline sc_retval set_next(sc_session *s, sc_addr l1, sc_addr l2);
+
+/// Установить значением для элемента списка @p list1
+/// sc-элемент с sс-адресом @p list2.
+/// Необходимые sc-элементы будут созданы в sc-сегменте @p seg.
+static sc_retval set_value(sc_session *s, sc_segment *seg, sc_addr list,
+    sc_addr val);
+
+/// Аналогично \verb|#sc_list::set_value|, только необходимые sc-элементы
+/// будут созданы в sc-сегменте, в котором находится sc-элемент @p l1.
+static inline sc_retval set_value(sc_session *s, sc_addr l, sc_addr v);
+\end{lstlisting}
+
+Самый простой способ перебора элементов таких списков от головы к
+хвосту можно организовать следующим образом:
+\begin{lstlisting}[texcl]
+// Текущим обрабатываемым элементом
+// является голова списка.
+sc_addr list_current = list_head;
+while (list_current) {
+    // Получаем значения текущего элемента списка.
+    sc_addr value = sc_list::get_value(session, list_current);
+
+    //
+    // Производим обработку значения.
+    //
+
+    // Получаем следующий элемент списка для текущего.
+    // Если текущим является хвостовой элемент, то
+    // \verb|sc_list::get_next| вернет 0.
+    list_current = sc_list::get_next(session, list_current);
+}
+\end{lstlisting}
+
+Однако при помощи однонаправленных итераторов такой перебор элементов
+списка можно организовать более лаконично:
+\begin{lstlisting}[texcl]
+// Создаем итератор, указывающий на голову списка.
+sc_list::iterator list_it(session, list_head);
+
+// Создаем итератор, который покажет, что
+// достигнут конец списка.
+sc_list::iterator list_it_end;
+
+for (; list_it != list_it_end; ++list_it) {
+    // Получаем значения текущего элемента списка.
+    sc_addr value = *list_it;
+
+    //
+    // Производим обработку значения.
+    //
+}
+\end{lstlisting}
+
+Кроме \lstinline|sc_list::iterator| есть еще
+\lstinline|sc_list::reverse_iterator|, который осуществляет перебор
+списка в обратном направлении, т.е. оператор \verb|++| переводит итератор с
+текущего элемента списка на предыдущий. Для определения начала списка
+все равно необходимо использовать объект класса
+\lstinline|sc_list::reverse_iterator|, созданный без аргументов.
+
+И напоследок, если список вам уже не нужен, то его можно удалить при
+помощи метода \lstinline|sc_list::erase|:
+\begin{lstlisting}[texcl]
+/// Удалит элемент списка по sc-адресу @p list
+/// и все следующие за ним элементы списка.
+/// Удаляет только элементы списка, а не их значения.
+///
+/// Как правило в качестве @p list
+/// надо передавать головной элемент списка
+static void erase(sc_session *s, sc_addr list);
+\end{lstlisting}
 
 %%% Local Variables: 
 %%% mode: latex
