add to chap4 subsection about sc-memoty initialization.

--- a/chap1.tex
+++ b/chap1.tex
@@ -164,6 +164,9 @@ New -> Project. В диалоге <<New Project>> вас будет интере
   \includegraphics{images/1/test/5}
 \end{figure}
 
+\subsection{Создания программы}
+\label{sec:Desc_wave_find_path}
+
 %%% Local Variables: 
 %%% mode: latex
 %%% TeX-master: "main"
