--- a/chap2.tex
+++ b/chap2.tex
@@ -1,4 +1,6 @@
+
 \chapter{Построение фрагмента онтологии теоретико-графовой задачи}
+\label{cha:Graph_onto}
 
 В этом разделе я описываю выполнение второго этапа расчетной
 работы на примере задачи поиска минимального пути в неориентированном
@@ -548,8 +550,10 @@ SC-коде так, как показано на рисунке~\ref{fig:Path_Fi
 этапа и перейдем к более конкретной формулировке задания.
 
 \section{Пример выполнения}
+\label{sec:-Graph_onto_example}
 
 \subsection{Список понятий}
+\label{sec:-Graph_onto_concept_list}
 
 \begin{itemize}
 \item Графовая структура (абсолютное понятие) - это такая
@@ -642,6 +646,7 @@ SC-коде так, как показано на рисунке~\ref{fig:Path_Fi
 \end{itemize}
 
 \subsection{Тестовые примеры}
+\label{sec:-Graph_onto_tests}
 
 Во всех тестах графы будет приведены в сокращенной форме со скрытыми
 ролями элементов графа.
