--- a/chap4_libsc.tex
+++ b/chap4_libsc.tex
@@ -190,6 +190,7 @@ sc-сессия, поэтому в следующем разделе я начн
 практические вопросы использования библиотеки моделирования sc-памяти.
 
 \subsection{Начало работы с библиотекой libsc}
+\label{sec:Begin_with_libsc}
 
 В прошлом разделе мы рассмотрели логическое устройство сегментной
 модели sc-памяти, а теперь проведем аналогию с текущей реализацией на
