use images path

--- a/chap1.tex
+++ b/chap1.tex
@@ -79,7 +79,7 @@ New -> Project. В диалоге <<New Project>> вас будет интере
  
   \begin{figure}[h!]
     \centering
-    \includegraphics[scale=0.6]{images/1/Select_project_type}
+    \includegraphics[scale=0.6]{1/Select_project_type}
   \end{figure}
 
 Чтобы собрать проект, выберите пункт меню Build -> Build Solution
@@ -133,35 +133,35 @@ New -> Project. В диалоге <<New Project>> вас будет интере
 
 \begin{figure}[h!]
   \centering
-  \includegraphics{images/1/test/1}
+  \includegraphics{1/test/1}
 \end{figure}
 
 2.	graph2.txt
 
 \begin{figure}[h!]
   \centering
-  \includegraphics{images/1/test/2}
+  \includegraphics{1/test/2}
 \end{figure}
 
 3.	graph3.txt
 
 \begin{figure}[h!]
   \centering
-  \includegraphics{images/1/test/3}
+  \includegraphics{1/test/3}
 \end{figure}
  
 4.	graph4.txt
 
 \begin{figure}[h!]
   \centering
-  \includegraphics{images/1/test/4}
+  \includegraphics{1/test/4}
 \end{figure}
  
 5.	graph5.txt
 
 \begin{figure}[h!]
   \centering
-  \includegraphics{images/1/test/5}
+  \includegraphics{1/test/5}
 \end{figure}
 
 \subsection{Создания программы}
