--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,7 @@
 % Подключаем графику
 \usepackage[pdftex]{graphicx}
 \pdfcompresslevel=9
-\graphicspath{{./images}}
+\graphicspath{{images/}}
 
 % Подключаем математические формулы
 \usepackage{amsmath}
